tests/misc/fallback_test/expected/074_attributes.php.expected
src/074_attributes.php:3 PhanSyntaxError syntax error, unexpected end of file, expecting identifier (T_STRING)
