tests/misc/fallback_test/expected/074_attributes.php.expected80
src/074_attributes.php:2 PhanSyntaxError syntax error, unexpected token "#[", expecting identifier (at column 7)
